Set .selection-box min-width to 12em to avoid unintentional wrapping of verse-list-line

--- a/css/tool_panel.css
+++ b/css/tool_panel.css
@@ -469,6 +469,7 @@ tr.td-underline td {
 .selection-box {
   display: inline-block;
   margin-left: 0.1em 0.1em 0.1em 0.5em;
+  min-width: 12em;
 }
 
 @media only screen and (min-width: 1000px) {
